--- a/public/bower.json
+++ b/public/bower.json
@@ -19,6 +19,7 @@
     "bootstrap": "^3.3.7",
     "bootstrap-calendar": "^0.2.5",
     "eonasdan-bootstrap-datetimepicker": "^4.17.43",
-    "angular": "^1.5.9"
+    "angular": "^1.5.9",
+    "angular-cookies": "^1.5.9"
   }
 }
