--- a/public/bower.json
+++ b/public/bower.json
@@ -20,6 +20,7 @@
     "bootstrap-calendar": "^0.2.5",
     "eonasdan-bootstrap-datetimepicker": "^4.17.43",
     "angular": "^1.5.9",
-    "angular-cookies": "^1.5.9"
+    "angular-cookies": "^1.5.9",
+    "urijs": "uri.js#^1.18.4"
   }
 }
